plugins {
    id 'eclipse'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
}

version = '1.19.4-2.1.1.4'
group = 'io.github.lightman314.lightmanscurrency'
archivesBaseName = 'lightmanscurrency'

// Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))

minecraft {
    // The mappings can be changed at any time, and must be in the following format.
    // snapshot_YYYYMMDD   Snapshot are built nightly.
    // stable_#            Stables are built at the discretion of the MCP team.
    // Use non-default mappings at your own risk. they may not always work.
    mappings channel: 'official', version: '1.19.4'
    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            
            property 'forge.enabledGameTestNamespaces', 'lightmanscurrency'
			
            mods {
                lightmanscurrency {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            args '--mod', 'lightmanscurrency', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')

            mods {
                lightmanscurrency {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    maven {
        url = "https://www.cursemaven.com"
    }
    //JEI repository when working on plugin
    /*maven {
    	name = "Progwm17 maven"
    	url = "https://dvs1.progwm16.com/files/maven/"
    }
    maven {
    	name = "ModMaven"
    	url = "https://modmaven.k-4u.nl"
    }*/
}

dependencies {

    minecraft 'net.minecraftforge:forge:1.19.4-45.0.29'
   	
   	//JEI when actually working on plugin
    //compileOnly fg.deobf("mezz.jei:jei-1.19.4-common-api:13.1.0.2")
    //compileOnly fg.deobf("mezz.jei:jei-1.19.4-forge-api:13.1.0.2")
    //JEI when not working on plugin, to save compile/runClient time
    compileOnly fg.deobf("curse.maven:jei-238222:4473386")
    runtimeOnly fg.deobf("curse.maven:jei-238222:4473386")
    
    //Curios API
    compileOnly fg.deobf("curse.maven:curios-309927:4478589")
    //Curios Runtime
    //runtimeOnly fg.deobf("curse.maven:curios-309927:4478589")

    //Immersive Engineering API
    compileOnly fg.deobf("curse.maven:immersive-engineering-231951:3963698")
    
    compileOnly fg.deobf('curse.maven:inventory-profiles-next-495267:3825214')
    compileOnly fg.deobf('curse.maven:lightmans-discord-integration-545459:4111018')
    
}

// Example for how to get properties into the manifest for reading by the runtime..
jar {
    manifest {
        attributes([
            "Specification-Title": "lightmanscurrency",
            "Specification-Vendor": "lightman314",
            "Specification-Version": "1", // We are version 1 of ourselves
            "Implementation-Title": project.name,
            "Implementation-Version": "${version}",
            "Implementation-Vendor" :"lightman314",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

// Example configuration to allow publishing using the maven-publish task
// This is the preferred method to reobfuscate your jar file
jar.finalizedBy('reobfJar')
// However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
//publish.dependsOn('reobfJar')


publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file:///${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}